Fix scrollbar width

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap');
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 5px;
 }
 
 ::-webkit-scrollbar-track {
